--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
+html{
+  background-color: rgb(90, 167, 127);
+}
+
 .app {
   padding: 30px;
   background-color: rgb(90, 167, 127);
-  height: 100%;
-  width: 100%;
+  height:100%;
+  width:100%;
 }
 
 .task {
